--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "todate_server",
   "version": "1.0.0",
   "description": "this is a todate server",
-  "main": "./app.js",
+  "main": "./index.js",
   "scripts": {
-    "test": "node ./dist/app.js",
-    "start": "nodemon ./dist/app.js",
-    "convert": "npx tsc app.ts --watch"
+    "test": "node index.js",
+    "start": "nodemon index.js"
   },
   "author": "Mohammed Qurany Ibrahim",
   "license": "ISC",
@@ -15,6 +14,11 @@
     "@types/node": "^22.7.7",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "mongodb": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3"
   }
 }
